Closed
Bug 1648356
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::fontlist::FontList::ShareBlocksToProcess]
Categories
(Core :: Graphics: Text, defect)
Tracking
()
RESOLVED
FIXED
mozilla79
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | disabled |
| firefox77 | --- | unaffected |
| firefox78 | --- | disabled |
| firefox79 | --- | disabled |
People
(Reporter: gsvelto, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-ef2bb61a-d5a4-42c2-ae2d-8ad150200623.
Top 10 frames of crashing thread:
0 xul.dll mozilla::fontlist::FontList::ShareBlocksToProcess gfx/thebes/SharedFontList.cpp:618
1 xul.dll mozilla::dom::ContentParent::InitInternal dom/ipc/ContentParent.cpp:2635
2 xul.dll mozilla::dom::ContentParent::LaunchSubprocessResolve dom/ipc/ContentParent.cpp:2364
3 xul.dll mozilla::dom::ContentParent::WaitForLaunchSync dom/ipc/ContentParent.cpp:1121
4 xul.dll static mozilla::dom::ContentParent::GetNewOrUsedBrowserProcess dom/ipc/ContentParent.cpp:1061
5 xul.dll static mozilla::dom::ContentParent::CreateBrowser dom/ipc/ContentParent.cpp:1345
6 xul.dll nsFrameLoader::TryRemoteBrowserInternal dom/base/nsFrameLoader.cpp:2627
7 xul.dll nsFrameLoader::TryRemoteBrowser dom/base/nsFrameLoader.cpp:2690
8 xul.dll nsFrameLoader::ShowRemoteFrame dom/base/nsFrameLoader.cpp:1094
9 xul.dll nsFrameLoader::Show dom/base/nsFrameLoader.cpp:965
The oldest nightly buildid w/ this crash is 20200622214758. Oddly enough we've got an older crash from beta w/ buildid 20200616235426. The raw crash reason is MOZ_CRASH(failed to share block).
Comment 1•5 years ago
|
||
Looks like the the crash reason got added recently in bug 1640119.
Updated•5 years ago
|
Has Regression Range: --- → yes
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1640119
status-firefox77:
--- → unaffected
status-firefox78:
--- → affected
status-firefox79:
--- → affected
status-firefox-esr68:
--- → unaffected
| Assignee | ||
Comment 3•5 years ago
|
||
This is behind a (default-disabled) pref, so release builds are unaffected.
Flags: needinfo?(jfkthame)
Updated•5 years ago
|
status-firefox-esr78:
--- → disabled
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/57182c153f37
Don't crash the parent process we fail to share font-list blocks while launching a child; the content process will safely handle this by requesting blocks as needed. r=jwatt
Comment 6•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Updated•5 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•