Bug 1648356 - Don't crash the parent process we fail to share font-list blocks while launching a child; the content process will safely handle this by requesting blocks as needed. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D81338